[package]
name = "homework"
version = "0.1.0"
edition = "2021"
authors = ["wylited <wylited@gmail.com>"]
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lionel = { path = "../lionel"}
tokio = { version = "1", features = ["full"] }