[package]
name = "lionel"
version = "0.1.0"
edition = "2021"
authors = ["wylited <wylited@gmail.com>"]
description = "A utility library for manipulating useful information like moodle session ids from lionel and encrypting it."
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "cookies"] }
tokio = { version = "1", features = ["full"] }